@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.8.20-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-08-20 19:53:36, took 00:13:59, with 50 workers, on 4033 cases, 0 failed, 0 traces, 5 retries<br/>
+tested: 2025-08-20 21:21:10, took 00:21:20, with 50 workers, on 4033 cases, 1 failed, 0 traces, 7 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1071,7 +1071,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard02.tst">crypt-wireguard02.tst</a></td><td>success</td><td>wireguard over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard03.tst">crypt-wireguard03.tst</a></td><td>success</td><td>wireguard over wireguard</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard04.tst">crypt-wireguard04.tst</a></td><td>success</td><td>wireguard over loopback</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard05.tst">crypt-wireguard05.tst</a></td><td>success</td><td>wireguard over asymmetric ports</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard05.tst">crypt-wireguard05.tst</a></td><td>#6-run-r1 tping 100 10 2.2.2.2 vrf v1</td><td>wireguard over asymmetric ports</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/demo01.tst">demo01.tst</a></td><td>success</td><td>empty demo network</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/demo02.tst">demo02.tst</a></td><td>success</td><td>addressed demo network</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop1-bgp01.tst">intop1-bgp01.tst</a></td><td>success</td><td>interop1: ebgp</td></tr>
